Lab 9 - finished with all the lab excersises, i have this time made a scoring system that is using the Spring RestTemplate.